# SimpleWebFramework

./: .gitignore  CMakeLists.txt  Index.html  LICENSE
Network/: CMakeLists.txt
Network/src/main/c++/headers/network/: TcpSocket.hpp  TcpSocketServer.hpp
Network/src/main/c++/headers/network/crypto/: base64.hpp  sha1.hpp
Network/src/main/c++/headers/network/exceptions/: IOException.hpp  ParseException.hpp  RuntimeException.hpp
Network/src/main/c++/headers/network/io/: DataInputStream.hpp  DataOutputStream.hpp
Network/src/main/c++/headers/network/io/base/: ByteArrayInputStream.hpp  ByteArrayOutputStream.hpp  InputStream.hpp  OutputStream.hpp  SocketInputStream.hpp  SocketOutputStream.hpp
Network/src/main/c++/headers/network/nonblocking/: HttpSocket.hpp  WebSocket.hpp
Network/src/main/c++/headers/network/protocol/: HTTP.hpp  WS.hpp
Network/src/main/c++/native/network/: TcpSocket.cpp  TcpSocketServer.cpp
Network/src/main/c++/native/network/crypto/: base64.cpp  sha1.cpp
Network/src/main/c++/native/network/exceptions/: RuntimeException.cpp
Network/src/main/c++/native/network/io/: DataInputStream.cpp  DataOutputStream.cpp
Network/src/main/c++/native/network/io/base/: ByteArrayInputStream.cpp  ByteArrayOutputStream.cpp  SocketInputStream.cpp  SocketOutputStream.cpp
Network/src/main/c++/native/network/nonblocking/: HttpSocket.cpp  WebSocket.cpp
Network/src/main/c++/native/network/protocol/: HTTP.cpp  WS.cpp
share/: Index.html  input.js  main.js  output.js
share/bullet/: bullet.css  bullet.json  main.js
share/old/: Index.html  main.js
src/main/c++/headers/: App.hpp  HttpServer.hpp  SimpleWebServer.hpp  WebSocketServer.hpp
src/main/c++/headers/utils/: NBTimer.hpp  PointerGuard.hpp  SyncTimer.hpp
src/main/c++/native/: App.cpp  HttpServer.cpp  SimpleWebServer.cpp  WebSocketServer.cpp  main.cpp
(+2 files in other folders)
